@@ -3,6 +3,7 @@ Revision history for libev, a high-performance and full-featured event loop.
 3.2
 	- fix a 64 bit overflow issue in the select backend,
           by using fd_mask instead of int for the mask.
+        - rename internal sighandler to avoid clash with very old perls.
 
 3.1  Thu Mar 13 13:45:22 CET 2008
 	- implement ev_async watchers.
